(library
 (name ezAPI)
 (public_name ez-api.common)
 (modules arg param req path mime meth err security service doc url error_codes ezAPI)
 (libraries lwt ezEncoding ezDebug ezLwtSys))

(library
 (name ezAPIJS)
 (public_name ez-api.js)
 (optional)
 (modules)
 (libraries ezAPI ezjsonm_js ezDebug_js ezLwtSys_js))
